Fix button size and transition speed, along with overflow on primary welcome section

--- a/styles.sass
+++ b/styles.sass
@@ -45,7 +45,8 @@ button
     font-size: 1rem
     height: 3rem
     margin-top: 1.625rem
-    transition: all 1s
+    max-width: 16rem
+    transition: all 0.3s
     width: 100%
     &:hover
         background-color: hsl(0, 0%, 100%)
@@ -68,8 +69,9 @@ body
 
 .primary
     background-color: hsl(0, 0%, 100%)
-    height: 13.5rem
+    height: auto
     padding: 2.5rem
+    overflow: visible
     h2
         color: hsl(71, 73%, 54%)
         margin-bottom: 0.7rem
